[package]
name = "haibi-chan"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
axum = "0.8.4"
axum-server = { version = "0.7.2", features = ["tls-rustls-no-provider"] }
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1.45.1", features = ["full"] }
